# TruyCapSteam

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
.github/workflows/: build.yml
extlibs/aixlog/include/: aixlog_wrapper.hpp
include/: App.h  ArgumentParser.h  Localizer.h  Logger.h  ServiceClient.h  ServiceServer.h  SignalHandler.h  Utils.h
src/: App.cpp  ArgumentParser.cpp  Localizer.cpp  Logger.cpp  Main.cpp  ServiceClient.cpp  ServiceServer.cpp  SignalHandler.cpp  TruyCapSteam.manifest  Utils.cpp
